<resources>
    <string name="app_name">HitsHub</string>
    <string name="get_started">Get Started</string>
    <string name="continue_without_login">Continue without login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="welcome_back">Sing in</string>
    <string name="chart_tracks">Top-10 tracks</string>
    <string name="chart_albums">Top-10 albums</string>
    <string name="chart_tracks_description">Popular tracks from the Deezer community</string>
    <string name="chart_albums_description">Popular albums from the Deezer community</string>
    <string name="searched_tracks">Searched tracks</string>
    <string name="searched_albums">Searched albums</string>
    <string name="message">Message…</string>
    <string name="chat_message_error">Your account is anonymous. Please register to access chat</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liked_tracks">Liked tracks</string>
</resources>
