<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gray_gradient"
    tools:context=".activities.SignInActivity">

    <TextView
        android:id="@+id/create_acc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_back"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/sign_in_with_google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/google_button_style"
        android:drawableStart="@drawable/common_google_signin_btn_icon_light_focused"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_in_with_google"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_acc_text"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_with_google_button"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_editText"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_editText"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/sing_in_with_email_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/red_button_style"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_in_with_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_editText"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/password_editText"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/sign_up_with_email_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/default_button_style"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_up_with_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sing_in_with_email_button"
        app:layout_constraintStart_toStartOf="@+id/sing_in_with_email_button"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_with_email_button"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>